# VideoEdit

./: .cursorrules 2  .cursorrules.json  .gitattributes  .gitignore  AREAS_FOR_IMPROVEMENT_FIXED.md  BACKGROUND_LID_IMPLEMENTATION.md  BATCH_TABLE_VERIFICATION_REPORT.md  BATCH_TRANSCRIPTION_TEST_RESULTS.md  BUILD_VALIDATION_REPORT.md  CICD_IMPROVEMENTS_SUMMARY.md  CI_CD_STATUS_REPORT.md  CLIP_COMPREHENSIVE_CONSOLIDATION_SUMMARY.md  CLIP_DEV_RUNBOOK.md  CLIP_FEATURE_CONSOLIDATION_SUMMARY.md  COMPLETE_EXAMPLE.md  DEPLOYMENT_VALIDATION_FINAL_REPORT.md  DESIGN_REVIEW.md  DEV_CHANGELOG.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  DOCUMENTATION_SUMMARY.md  FAISS_INTEGRATION_GUIDE.md  FAISS_PERFORMANCE_GUIDE.md  FEATURE_BRANCH.md  FIREBASE_KEYSTORE_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MERGE_TO_MAIN_COMPLETE.md  NEXT_STEPS.md  README.md  RELEASE_GUIDE.md  RESOURCE_MONITOR_BRANCH_COMPLETE.md  ROBUST_LID_IMPLEMENTATION.md  ROOM_IMPLEMENTATION_COMPLETE.md  TEMPORAL_SAMPLING_VERIFICATION.md  TEST_SUITE_README.md  TEST_SUITE_SUMMARY.md  WHISPER_CONNECTOR_DEPLOYMENT_SUCCESS.md  WHISPER_E2E_SUMMARY.md  WHISPER_STEP1_FIXES.md  XIAOMI_PAD_DEPLOYMENT_SUCCESS.md  XIAOMI_PAD_TEST_REPORT.md  (+70 more)
.github/: CODEOWNERS  labeler.yml
Doc/: README.md  UI_DOCUMENTATION_CONSOLIDATION_SUMMARY.md  cursor_rule.md
app/: build.gradle.kts  google-services.json  google-services.json.template  lint-baseline.xml  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  FaissBridge.cpp  FaissBridgeStub.cpp
asrcore/: build.gradle.kts
asrcore/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ops/: all.sh  (+9 more)
(+598 files in other folders)
